<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="tag_num" type="id"></item>
    <item name="tag_lock" type="id"></item>
    <item name="tag_holder" type="id"></item>
    <item name="target_view" type="id"></item>
    <item name="target_second" type="id"></item>

    <string name="app_name">XMISA</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">欢迎使用东孚烟叶仓库管理系统</string>
    <string name="user">用户名</string>
    <string name="key">密码</string>
    <string name="exp_user">nti56.com</string>
    <string name="auto_login">自动登录</string>
    <string name="keep_key">记住密码</string>
    <string name="login">登录</string>
    <string name="server_ip">服务器IP</string>
    <string name="server_port">端口号</string>
    <string name="version">版本信息：1.0.0.1</string>
    <string name="store">仓储</string>
    <string name="quality_check">质检</string>
    <string name="maintain">养护</string>
    <string name="rfid">RFID</string>
    <string name="rfid_start">开始扫描</string>
    <string name="rfid_stop">停止扫描</string>
    <string name="setting">设置</string>
    <string name="barcode">一维条码</string>
    <string name="fk_code">复烤厂\n一维条码</string>
    <string name="rfid_code">RFID条码</string>
    <string name="receive">收货</string>
    <string name="put_in">入库</string>
    <string name="put_out">出库</string>
    <string name="on_board">车载</string>
    <string name="inventory">盘点</string>
    <string name="assign">分配</string>
    <string name="examine">查看</string>
    <string name="survey">普查</string>
    <string name="fumigate">熏蒸</string>
    <string name="pests">虫情</string>
    <string name="patrol">巡查</string>
    <string name="change_password">修改密码</string>
    <string name="logout">注销</string>
    <string name="change_ip">修改IP地址</string>
    <string name="remind_exit">确定要退出应用吗？</string>
    <string name="remind_delete">确定要删除该项？</string>
    <string name="sure">确定</string>
    <string name="cancel">返回</string>
    <string name="refresh">刷新</string>
    <string name="appearance">外观</string>
    <string name="color">颜色</string>
    <string name="weight">重量</string>
    <string name="weightjudge">重量判定</string>
    <string name="water_feel">手感\n水分</string>
    <string name="waterfeel">手感水分</string>
    <string name="water">水分</string>
    <string name="waterjudge">水分判定</string>
    <string name="waterdev">水分\n偏差</string>
    <string name="densitydev">密度\n偏差</string>
    <string name="mould">霉变</string>
    <string name="oiltrace">油印</string>
    <string name="mothy">虫蛀</string>
    <string name="odor">异味</string>
    <string name="impurity">杂物</string>
    <string name="colligate">综合\n判定</string>
    <string name="tray_num">货位\n总数</string>
    <string name="ivt_tray_totle">盘点货\n位总数</string>
    <string name="ivt_tray_done">已盘点\n货位数</string>
    <string name="ivt_num">盘点数量\n(件/箱)</string>
    <string name="ivt_done">已完成数量\n(件/箱)</string>
    <string name="ivt_wait">待完成数量\n(件/箱)</string>
    <string name="ivt_weight">盘点重量\n(公斤)</string>
    <string name="stock_num">库存数量\n(件/箱)</string>
    <string name="stock_weight">库存重量\n(公斤)</string>
    <string name="check_num">检测\n数量</string>
    <string name="goods_id">货物编码</string>
    <string name="goods_name">货物名称</string>
    <string name="tray_id">货位编码</string>
    <string name="tray_name">货位名称</string>
    <string name="date_check">检测日期</string>
    <string name="concentration6">6小时\n浓度</string>
    <string name="concentration12">12小时\n浓度</string>
    <string name="concentration24">24小时\n浓度</string>
    <string name="concentration48">48小时\n浓度</string>
    <string name="concentration72">72小时\n浓度</string>
    <string name="concentration96">96小时\n浓度</string>
    <string name="concentration144">144小时\n浓度</string>
    <string name="concentration216">216小时\n浓度</string>
    <string name="spec">规格</string>
    <string name="rate">换算率</string>
    <string name="fact_num">完成数量\n(件)</string>
    <string name="plan_weight">计划重量\n(KG)</string>
    <string name="fact_weight">完成重量\n(KG)</string>
    <string name="finish">完成</string>
    <string name="tray_name_">货位名称:</string>
    <string name="goods_id_">货物编码:</string>
    <string name="goods_name_">货物名称:</string>
    <string name="spec_">规格:</string>
    <string name="fact_num_">完成数量(件):</string>
    <string name="plan_weight_">计划重量(KG):</string>
    <string name="fact_weight_">完成重量(KG):</string>
    <string name="task_add">新建任务</string>
    <string name="record_add">新增记录</string>
    <string name="id">ID</string>
    <string name="carid">抱车编号</string>
    <string name="doorid">门禁编号</string>
    <string name="intime">入库时间</string>
    <string name="outtime">出库时间</string>
    <string name="task_date">单据日期</string>
    <string name="time_zone">时间段</string>
    <string name="inventory_id">盘点单号</string>
    <string name="ivt_time">盘点时间</string>
    <string name="assign_id">分配单号</string>
    <string name="examine_id">质检单号</string>
    <string name="input_id">入库单号</string>
    <string name="output_id">出库单号</string>
    <string name="patrol_id">巡查单号</string>
    <string name="pests_id">虫情单号</string>
    <string name="fumigate_id">熏蒸单号</string>
    <string name="fumigate_room">熏蒸室</string>
    <string name="fumigate_method">熏蒸方法</string>
    <string name="fumigate_dosingdate">用药日期</string>
    <string name="fumigate_airstart">通风开始\n日期</string>
    <string name="fumigate_airend">通风结束\n日期</string>
    <string name="survey_id">普查单号</string>
    <string name="building">楼栋</string>
    <string name="ivt_state">盘点状态</string>
    <string name="person">操作人</string>
    <string name="note">备注</string>
    <string name="check_line">质检线</string>
    <string name="taskid">任务号</string>
    <string name="type">业务类型</string>
    <string name="goalware">备料目的仓库</string>
    <string name="vbomname">生产牌号</string>
    <string name="provider">加工商</string>
    <string name="pc_num">微机编号</string>
    <string name="plan_num">计划数量\n(件)</string>
    <string name="progress">进度</string>
    <string name="state">状态</string>
    <string name="car_num">车牌号</string>
    <string name="tray">货位</string>
    <string name="floor">楼层</string>
    <string name="location">位置</string>
    <string name="warefloor">仓库楼层</string>
    <string name="survey_detailnum">普查货位数</string>
    <string name="patrol_point">巡查项目</string>
    <string name="pests_card_num">诱虫板编号</string>
    <string name="pests_serricorne">烟草甲</string>
    <string name="pests_elutella">烟草粉螟</string>
    <string name="patrol_result">巡查结果</string>
    <string name="patrol_trouble">存在隐患</string>
    <string name="picture">图片</string>
    <string name="task_solution">整改措施</string>
    <string name="correct_date">整改完成时间</string>
    <string name="id_">ID:</string>
    <string name="building_">楼栋:</string>
    <string name="fumigate_room_">熏蒸室:</string>
    <string name="fumigate_method_">熏蒸方法:</string>
    <string name="total_num_">任务数量:</string>
    <string name="check_num_">检测数量:</string>
    <string name="check_item_">检测项目:</string>
    <string name="check_line_">质检线:</string>
    <string name="inventory_id_">盘点单号:</string>
    <string name="assign_id_">分配单号:</string>
    <string name="examine_id_">质检单号:</string>
    <string name="warefloor_">仓库楼层:</string>
    <string name="task_date_">单据日期:</string>
    <string name="convey_id_">调运单号:</string>
    <string name="input_id_">入库单号:</string>
    <string name="output_id_">出库单号:</string>
    <string name="patrol_id_">巡查单号:</string>
    <string name="pests_id_">虫情单号:</string>
    <string name="fumigate_id_">熏蒸单号:</string>
    <string name="survey_id_">普查单号:</string>
    <string name="drug_">药物:</string>
    <string name="dosingunit_">药物单位(g/m³):</string>
    <string name="note_">备注:</string>
    <string name="dosage_">用药量(Kg):</string>
    <string name="dosingdate_">用药日期:</string>
    <string name="fumigate_volume_">熏蒸体积(m³):</string>
    <string name="air_start_">通风开始日期:</string>
    <string name="air_end_">通风结束日期:</string>
    <string name="taskid_">任务号:</string>
    <string name="type_">业务类型:</string>
    <string name="provider_">加工商:</string>
    <string name="pc_num_">微机编号:</string>
    <string name="plan_num_">计划数量(件):</string>
    <string name="state_nc_">状态:</string>
    <string name="car_num_">车牌号:</string>
    <string name="save">保存</string>
    <string name="save_back">保存并返回</string>
    <string name="back">返回</string>
    <string name="take_photo">本地相册</string>
    <string name="take_camera">拍照</string>
    <string name="upload">上传</string>
    <string name="save_upload">保存并上传</string>
    <string name="commit">反馈NC</string>
    <string name="assign_sure">确认分配</string>
    <string name="scan_rfid">RFID扫描</string>
    <string name="check_line1">质检线1</string>
    <string name="check_line2">质检线2</string>
    <string name="check_line3">质检线3</string>
    <string name="choose_building">请选择目标楼栋</string>
    <string name="none">无</string>
    <string name="wet_out">湿损</string>
    <string name="lose">丢失</string>

</resources>