<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_list_sur_detail"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:descendantFocusability="afterDescendants"
    android:orientation="horizontal" >

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:id="@+id/public_id"
        android:layout_width="40dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_trayname"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/tray_name"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_goodsid"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/goods_id"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_goodsname"
        android:layout_width="190dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:lines="2"
        android:text="@string/goods_name"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_traynum"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/tray_num"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_checknum"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/check_num"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_colligate"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/colligate"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_appearance"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/appearance"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_color"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/color"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_waterfeel"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/water_feel"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_mould"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/mould"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_oiltrace"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/oiltrace"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_mothy"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/mothy"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_odor"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/odor"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_sur_detail_impurity"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/impurity"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"/>

</LinearLayout>