<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="944dp"
    android:layout_height="56dp" >

    <View
        android:layout_width="1dp"
        android:layout_height="56dp"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/public_id"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ivt_date"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/task_date"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ivt_orderid"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/inventory_id"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ivt_type"
        android:layout_width="210dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/type"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ivt_building"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/building"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ivt_traytotle"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/ivt_tray_totle"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ivt_traydone"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/ivt_tray_done"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ivt_num"
        android:layout_width="95dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/ivt_num"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ivt_done"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/ivt_done"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ivt_wait"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/ivt_wait"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ivt_statenc"
        android:layout_width="85dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/transparent" />

</LinearLayout>