<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="944dp"
    android:layout_height="56dp"
    android:orientation="horizontal" >

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/public_id"
        android:layout_width="40dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_ipt_date"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/task_date"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ipt_orderid"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/input_id"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ipt_type"
        android:layout_width="210dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/type"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ipt_plannum"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/plan_num"
        android:textColor="@color/black"
        android:textSize="18dp" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ipt_pcnum"
        android:layout_width="94dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/pc_num"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ipt_building"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/building"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ipt_carnum"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/car_num"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_ipt_statenc"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

</LinearLayout>