<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="944dp"
    android:layout_height="56dp"
    android:orientation="horizontal" >

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/public_id"
        android:layout_width="40dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_asg_date"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/task_date"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_asg_orderid"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/assign_id"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_asg_type"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:lines="2"
        android:text="@string/type"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_asg_goodsname"
        android:layout_width="154dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:lines="2"
        android:text="@string/goods_name"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_asg_building"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/building"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_asg_carnum"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/car_num"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_asg_checkline"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/check_line"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_cc" />

    <TextView
        android:id="@+id/tv_asg_state"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/transparent" />

</LinearLayout>